Revert "Fix for incorrect handling of postprofile on small screens"
This reverts commit af9ee767b2653099cf825f87bd088800ef53747e.

--- a/theme/responsive.css
+++ b/theme/responsive.css
@@ -166,10 +166,7 @@ ul.topiclist dd.redirect {
 
 .postprofile,
 .search .postprofile,
-.pm .postprofile {
-	display: none;
-}
-
+.pm .postprofile,
 .post .postbody {
 	display: block;
 	overflow: hidden;
